objects/Account.object
<CustomObject>
    <fields>
        <fullName>Days_Since_Activity__c</fullName>
        <formula>TODAY() - LastActivityDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Custom Formula Field that calculates the days since the Last Activity Date</inlineHelpText>
        <label>Days Since Activity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dealer_Email__c</fullName>
        <label>Dealer Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Dealer_Focus__c</fullName>
        <description>Added for PFW data load - 08/2009</description>
        <label>Dealer Focus</label>
        <picklist>
            <picklistValues>
                <fullName>Agricultural</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C &amp; CE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Construction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lawn &amp; Garden</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lift Trucks</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Dealer_Group_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dealer Group Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts (Dealer Group Account)</relationshipLabel>
        <relationshipName>Accounts3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dealer_Group_Name2__c</fullName>
        <description>Changing over to formula field to automatically pull in values.</description>
        <formula>IF(ISBLANK( Corporation__c ), IF(ISBLANK( Group__c ), IF(OR( Site_Type__r.Name = &apos;Group&apos;, Site_Type__r.Name = &apos;Corporation&apos;), Name ,NULL), Group__r.Name ) , Corporation__r.Name )</formula>
        <label>Dealer Group Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Group_Volume_Pricing_Contract_URL__c</fullName>
        <label>Dealer Group Volume Pricing Contract URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Dealer_Group_Volume_Pricing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dealer Group Volume Pricing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dealer_s_Folder__c</fullName>
        <label>Dealer&apos;s Folder</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Dealer_s_Primary_Goal__c</fullName>
        <label>Dealer&apos;s Primary Goal</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Dealership_Health__c</fullName>
        <inlineHelpText>5 = Active Cobalt promoter. 
4 = Positive on Cobalt, highly likely to upgrade. 
3 = May continue in program/DAP but needs on-going selling. 
2 = Cobalt relationships are shallow. 
1 = DP has made a firm decision to actively oppose program/DAP.</inlineHelpText>
        <label>Dealership Health</label>
        <picklist>
            <picklistValues>
                <fullName>X - Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 - Champion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - Positive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Neutral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Skeptical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 - Hostile</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Dealix_Dealer__c</fullName>
        <label>Dealix Dealer #</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dealix_Lead_25_Miles__c</fullName>
        <label>Lead Estimate 25 Miles</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dealix_New_Car_Last_Date_Service__c</fullName>
        <label>New Car Last Date Service</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dealix_New_Car_Status__c</fullName>
        <label>New Car Status</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealix_Satisfaction_Score_Flag__c</fullName>
        <formula>IF( ISPICKVAL( Dealix_Satisfaction_Score__c , &quot;High&quot;), IMAGE(&quot;/img/samples/flag_green.gif&quot;,&quot;&quot;) ,
IF( ISPICKVAL( Dealix_Satisfaction_Score__c, &quot;Medium&quot;), IMAGE(&quot;/img/samples/flag_yellow.gif&quot;,&quot;&quot;),
IF(ISPICKVAL( Dealix_Satisfaction_Score__c, &quot;Low&quot;), IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;&quot;),&quot;&quot;)))</formula>
        <label>New Dealix Satisfaction Score Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealix_Satisfaction_Score__c</fullName>
        <label>New Dealix Satisfaction Score</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Dealix_Solutions_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dealix Solutions Rep</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>User.Title</field>
                <operation>equals</operation>
                <value>DSR</value>
            </filterItems>
            <infoMessage>Please select DSR from the lookup</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts9</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dealix_TAM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dealix TAM</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.Title</field>
                <operation>equals</operation>
                <value>TAM</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>AccountsnS4G</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dealix_Used_Car_Last_Date_Service__c</fullName>
        <label>Used Car Last Date Service</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dealix_Used_Car_Status__c</fullName>
        <label>Used Car Status</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealix_Value_Score_Flag__c</fullName>
        <formula>IF( ISPICKVAL( Dealix_Value_Score__c , &quot;High&quot;), IMAGE(&quot;/img/samples/flag_green.gif&quot;,&quot;&quot;) ,
IF( ISPICKVAL( Dealix_Value_Score__c, &quot;Medium&quot;), IMAGE(&quot;/img/samples/flag_yellow.gif&quot;,&quot;&quot;),
IF( ISPICKVAL( Dealix_Value_Score__c , &quot;Low&quot;), IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;&quot;),&quot;&quot;)))</formula>
        <label>New Dealix Value Score Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealix_Value_Score__c</fullName>
        <label>New Dealix Value Score</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Decision_Making_Model__c</fullName>
        <label>Decision Making Model</label>
        <picklist>
            <picklistValues>
                <fullName>Centralized</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Decentralized</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Designated_DSM_Nat_Ent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>DSM-Nat-Ent – Used only for Dealer Group DSM.</description>
        <inlineHelpText>Used only for Dealer Group DSM.</inlineHelpText>
        <label>DSM-Nat-Ent</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.Title</field>
                <operation>equals</operation>
                <value>DSM</value>
            </filterItems>
            <infoMessage>Only National DSMs</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Designated_DSM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Digital Sales Manager – Used for the primary owner of the Account.</description>
        <inlineHelpText>Used for the primary owner of the Account.</inlineHelpText>
        <label>Digital Solutions Manager</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.Title</field>
                <operation>startsWith</operation>
                <value>DSM</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Digital_Advisor_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Digital Advisor Lead</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts37Kn</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Digital_Advisor__c</fullName>
        <inlineHelpText>Separate additional Digital Advisers with a comma in this field.</inlineHelpText>
        <label>Digital Advisor(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Digital_Marketing_Consultant__c</fullName>
        <label>Digital Marketing Consultant</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Digital_Sales_Consultant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Digital Sales Consultant</description>
        <label>Digital Solutions Consultant</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.Title</field>
                <operation>startsWith</operation>
                <value>Digital Solutions Consultant</value>
            </filterItems>
            <infoMessage>Please select Digital Solutions Consultant from the list.</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Digital_Services_CAM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>If populated, this is the primary Services contact for Cobalt related products for this dealer group.</inlineHelpText>
        <label>Digital Services Marketing Strategist</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts2roa</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Digital_Solutions_Manager2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Digital Sales Manager 2 – will be used to house a second DSM in the cases where GM is the Primary OEM, but another ‘National’ OEM exists.</description>
        <label>Digital Solutions Manager 2</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.Title</field>
                <operation>equals</operation>
                <value>DSM</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>District__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>District</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Site_Type__r.District_Flag__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <infoMessage>Accounts with Site Type of &apos;District&apos;  only are allowed.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>District (Account)</relationshipLabel>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Do_Not_Fax__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checking this box will apply a Do Not Fax checkmark to all Contacts on this Account. Unchecking only applies to this Account.</inlineHelpText>
        <label>Do Not Fax</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_Not_Sell_Image__c</fullName>
        <formula>IF( Do_Not_Sell__c =TRUE, IMAGE(&quot;servlet/servlet.FileDownload?file=01540000000oJuT&quot;, &quot;Do Not Sell&quot;),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>In Digital Solutions Collections</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Do_Not_Sell__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Dealership is in collections with third party. Do not sell.</inlineHelpText>
        <label>Do Not Sell</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_Not_Solicit__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checking this box will apply a Do Not Solicit checkmark to all Contacts on this Account. Unchecking only applies to this Account.</inlineHelpText>
        <label>Do Not Solicit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Duplicate_Date__c</fullName>
        <description>Date/Time when account marked as &apos;Duplicate&apos;</description>
        <label>Duplicate Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Duplicate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Account marked as &apos;Duplicate&apos;</description>
        <label>Duplicate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ES_High_Profile__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ES High Profile</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Entity_Address__c</fullName>
        <formula>Legal_Entity_Address__c &amp; BR() &amp;
    Legal_Entity_City__c &amp; &quot;, &quot; &amp; Legal_Entity_State__c &amp; &quot; &quot; &amp; 
    Legal_Entity_Postal__c &amp; BR()</formula>
        <label>Entity Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estimated_Used_Inventory__c</fullName>
        <label>Estimated Used Inventory</label>
        <picklist>
            <picklistValues>
                <fullName>1-49</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50-100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>101-199</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>200+</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Exec_Sponsor__c</fullName>
        <label>Exec Sponsor</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Existing_Party_Number__c</fullName>
        <label>Existing Party Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Existing_Party__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Existing Party</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>F_I_Revenue__c</fullName>
        <label>F&amp;I Revenue</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Financial_Performance__c</fullName>
        <label>Dealership Website Goals</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Flight_Risk__c</fullName>
        <inlineHelpText>Forester Survey Risk Result</inlineHelpText>
        <label>Customer Loyalty</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>44</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>55</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>66</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Front_end_Notes__c</fullName>
        <label>Front-end Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Front_end_Products_Ready_to_Showcase__c</fullName>
        <label>Front-end Products Ready to Showcase</label>
        <picklist>
            <picklistValues>
                <fullName>Driver&apos;s License Scan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dynamic Suite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance &amp; Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I Leads</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Right Relationship 360</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Traver Consulting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vehicle Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>w.e.b. desking</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Front_end_Products_to_be_Sold__c</fullName>
        <label>Front-end Products to be Sold</label>
        <picklist>
            <picklistValues>
                <fullName>Driver&apos;s License Scan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dynamic Suite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance &amp; Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I Leads</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Right Relationship 360</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Traver Consulting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vehicle Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>w.e.b. desking</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>GM_Co_Op_Billing__c</fullName>
        <label>GM Co-Op Billing</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GM_Mfg_Supplied_Term__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>GM-provided Manufacturer Term List</inlineHelpText>
        <label>GM (Mfg Supplied) Term</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GM_Term_Notes__c</fullName>
        <inlineHelpText>Any notes with relation to the GM or Chrysler Term Dealer verification.</inlineHelpText>
        <label>Mfg Term Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GM_Term_Status__c</fullName>
        <inlineHelpText>Flag to denote if the Dealer is a suspected or confirmed termed GM Dealership.</inlineHelpText>
        <label>GM Term Status</label>
        <picklist>
            <picklistValues>
                <fullName>Suspected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Confirmed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Gen_Dept_Notes__c</fullName>
        <label>Gen Dept. Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Gen_Dept_Products_Ready_to_Showcase__c</fullName>
        <label>Gen Dept. Products Ready to Showcase</label>
        <picklist>
            <picklistValues>
                <fullName>ADP Phone system</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Elite Plus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enhanced Laser Form</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Get Wired</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Networking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>W.e.b 2000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other/Car!nk</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Gen_Dept_Products_to_be_Sold__c</fullName>
        <label>Gen Dept. Products to be Sold</label>
        <picklist>
            <picklistValues>
                <fullName>ADP Phone system ASP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Elite Plus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enhanced Laser Form</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Get Wired</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Networking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>W.e.b 2000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other/Car!nk</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Google_Maps_Link__c</fullName>
        <description>Create a link using Google Maps</description>
        <formula>&quot;http://maps.google.com/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=&quot; &amp;
IF(NOT(ISNULL(BillingStreet)), BillingStreet &amp; &quot;,&quot; , &quot;&quot;) &amp;
IF(NOT(ISNULL(BillingCity)), BillingCity &amp; &quot;,&quot; , &quot;&quot;) &amp;
IF(NOT(ISNULL(BillingState)), BillingState &amp; &quot;,&quot; , &quot;&quot;) &amp;
IF(NOT(ISNULL(BillingCountry)), BillingCountry &amp; &quot;,&quot; , &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Google Maps Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Group</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Site_Type__r.Group_Flag__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <infoMessage>Accounts with Site Type of &apos;Group&apos; only are allowed.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Group (Accounts)</relationshipLabel>
        <relationshipName>Accounts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Has_Corporate_Authorized_Signer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Has Corporate Authorized Contract Signers for Legal</description>
        <label>Has Corporate Authorized Signer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Holding_Company__c</fullName>
        <description>Added for PFW data load - 08/2009</description>
        <label>Holding Company</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IMR__c</fullName>
        <label>IMR</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ISR_Override__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>**Temporary** -- for FY16 for Amy as Key Rep Changes keep happening&quot;</description>
        <inlineHelpText>If set, this is the ISR to work the Account despite any other ISRs listed on this account for the current Fiscal Year (temporary field).</inlineHelpText>
        <label>ISR Override</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.Title</field>
                <operation>equals</operation>
                <value>ISR</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Accountstudt</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Independent_Used_Car_Dealership__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Independent Used Car Dealership</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InfoUSA_ID__c</fullName>
        <description>--backend system field</description>
        <label>InfoUSA ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Internet_Circuit_EOT_Date__c</fullName>
        <label>Internet Circuit EOT Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Internet_Circuit_Vendor__c</fullName>
        <label>Internet Circuit Vendor</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inventory_Management_System__c</fullName>
        <label>Inventory Management System</label>
        <picklist>
            <picklistValues>
                <fullName>Dealer Specialities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HomeNet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Key_CAM_Email__c</fullName>
        <label>Key CAM Email</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key_CAM__c</fullName>
        <label>Key CAM</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key_DOS__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Key DOS</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Key_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Key Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LDP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OEM Advisory Board</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LMA_Code__c</fullName>
        <label>LMA Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LMA_Product__c</fullName>
        <description>Rollup of LMA product in the Service Contract</description>
        <label>LMA Product</label>
        <summaryFilterItems>
            <field>Service_Contract__c.Description__c</field>
            <operation>contains</operation>
            <value>LMA</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Service_Contract__c.Line_Status__c</field>
            <operation>equals</operation>
            <value>ACTIVE</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Service_Contract__c.Budget__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>Service_Contract__c.Account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>LMA_Region__c</fullName>
        <description>Currently hidden from all except for Sys Admins - used to match LMA Region field on LMA Accounts to Agency Account Contacts of the same region.</description>
        <label>LMA Region</label>
        <picklist>
            <picklistValues>
                <fullName>NORTH CENTRAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NORTHEAST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SOUTH CENTRAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SOUTHEAST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WESTERN</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LMA_Regional_Director1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LMA Regional Director</label>
        <referenceTo>User</referenceTo>
        <relationshipName>AccountsXIuU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LMA_Regional_Director__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field was created incorrectly - will need to be deleted.</description>
        <label>LMA Regional Director</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts (LMA Regional Director)</relationshipLabel>
        <relationshipName>Accounts4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Year_Key_DOS__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Year Key DOS</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Year_Key_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Year Key Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Legal_Entity_Address__c</fullName>
        <label>Entity Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Entity_City__c</fullName>
        <label>Entity City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Entity_Last_Updated__c</fullName>
        <label>Entity Last Updated</label>
        <type>DateTime</type>
    </fields>
</CustomObject>